// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Header /> > should open the nav overlay 1`] = `
<DocumentFragment>
  <div
    class="rk-w-full"
  >
    <header
      class="rk-z-10 rk-flex rk-w-full rk-items-center rk-py-4"
    >
      <span>
        ExampleLogo
      </span>
      <div
        class="rk-w-full rk-justify-around rk-hidden rk-flex-wrap lg:rk-flex"
      >
        <nav
          aria-label="Main"
          class="rk-flex rk-items-center rk-mr-auto lg:rk-w-2/3"
        >
          <ul
            class="lg:rk-menu-horizontal rk-hidden rk-flex-wrap lg:rk-flex"
          />
        </nav>
        <nav
          aria-label="Secondary"
          class="rk-flex rk-items-center lg:rk-w-1/3 lg:rk-justify-end"
        >
          <ul
            class="lg:rk-menu-horizontal rk-hidden rk-flex-wrap lg:rk-flex"
          />
        </nav>
      </div>
      <button
        aria-hidden="false"
        class="rk-btn rk-h-10 rk-max-h-10 rk-min-h-fit rk-rounded-full rk-border-none rk-bg-white rk-p-2 rk-text-black	hover:rk-bg-neutral-100 hover:rk-text-neutral-900 active:rk-bg-neutral-300 [&>*:first-child]:rk-w-6 rk-ml-auto lg:rk-hidden"
        data-testid="open-nav"
      >
        <svg
          aria-label="open"
          fill="none"
          height="24"
          viewBox="0 0 40 40"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="20"
            cy="20"
            fill="none"
            r="20"
          />
          <path
            d="M9 12H31"
            stroke="#171717"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M9 20H31"
            stroke="#171717"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M9 28L31 28"
            stroke="#171717"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </header>
  </div>
</DocumentFragment>
`;

exports[`<Header /> > should open the nav overlay 2`] = `
<DocumentFragment>
  <div
    class="rk-w-full"
  >
    <header
      class="rk-z-10 rk-flex rk-w-full rk-items-center rk-py-4"
    >
      <span>
        ExampleLogo
      </span>
      <div
        class="rk-w-full rk-justify-around rk-absolute rk-bottom-0 rk-left-0 rk-z-10 rk-h-[calc(100%_-_72px)] rk-flex-col rk-overflow-y-auto rk-overflow-x-hidden rk-px-4 rk-pb-4 rk-pt-8 sm:rk-px-6 lg:rk-px-12"
      >
        <nav
          aria-label="Main"
          class="rk-flex rk-items-center rk-mr-auto lg:rk-w-2/3"
        >
          <ul
            class="lg:rk-menu-horizontal rk-menu-vertical rk-w-full"
          />
        </nav>
        <nav
          aria-label="Secondary"
          class="rk-flex rk-items-center lg:rk-w-1/3 lg:rk-justify-end"
        >
          <ul
            class="lg:rk-menu-horizontal rk-menu-vertical rk-w-full"
          />
        </nav>
      </div>
      <button
        aria-hidden="false"
        class="rk-btn rk-h-10 rk-max-h-10 rk-min-h-fit rk-rounded-full rk-border-none rk-bg-white rk-p-2 rk-text-black	hover:rk-bg-neutral-100 hover:rk-text-neutral-900 active:rk-bg-neutral-300 [&>*:first-child]:rk-w-6 rk-ml-auto"
        data-testid="close-nav"
      >
        <svg
          fill="none"
          height="24"
          viewBox="0 0 40 40"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="20"
            cy="20"
            fill="none"
            r="20"
          />
          <path
            d="M11 11L29 29"
            stroke="black"
            stroke-width="2"
          />
          <path
            d="M29 11L11 29"
            stroke="black"
            stroke-width="2"
          />
        </svg>
      </button>
    </header>
  </div>
</DocumentFragment>
`;

exports[`<Header /> > should open the nav overlay 3`] = `<DocumentFragment />`;

exports[`<Header /> > should render Header 1`] = `
<DocumentFragment>
  <header
    class="rk-z-10 rk-flex rk-w-full rk-items-center rk-py-4"
  >
    <span>
      ExampleLogo
    </span>
    <div
      class="rk-w-full rk-justify-around rk-hidden rk-flex-wrap lg:rk-flex"
    >
      <nav
        aria-label="Main"
        class="rk-flex rk-items-center rk-mr-auto lg:rk-w-2/3"
      >
        <ul
          class="lg:rk-menu-horizontal rk-hidden rk-flex-wrap lg:rk-flex"
        />
      </nav>
      <nav
        aria-label="Secondary"
        class="rk-flex rk-items-center lg:rk-w-1/3 lg:rk-justify-end"
      >
        <ul
          class="lg:rk-menu-horizontal rk-hidden rk-flex-wrap lg:rk-flex"
        />
      </nav>
    </div>
    <button
      aria-hidden="true"
      class="rk-btn rk-h-10 rk-max-h-10 rk-min-h-fit rk-rounded-full rk-border-none rk-bg-white rk-p-2 rk-text-black	hover:rk-bg-neutral-100 hover:rk-text-neutral-900 active:rk-bg-neutral-300 [&>*:first-child]:rk-w-6 rk-ml-auto lg:rk-hidden"
      data-testid="open-nav"
    >
      <svg
        aria-label="open"
        fill="none"
        height="24"
        viewBox="0 0 40 40"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="20"
          cy="20"
          fill="none"
          r="20"
        />
        <path
          d="M9 12H31"
          stroke="#171717"
          stroke-linecap="round"
          stroke-width="2"
        />
        <path
          d="M9 20H31"
          stroke="#171717"
          stroke-linecap="round"
          stroke-width="2"
        />
        <path
          d="M9 28L31 28"
          stroke="#171717"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </header>
</DocumentFragment>
`;
